<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="360dp"
    android:layout_height="500dp"
    android:padding="@dimen/default_margin"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Ajout de l'encadrement de l'image de la plante -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Insertion de l'image dans l'encadrement -->
        <ImageView
            android:id="@+id/image_item"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/trending1" />
    </androidx.cardview.widget.CardView>

    <!-- Affichage du nom de la plante -->
    <TextView
        android:id="@+id/popup_plant_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popup_plant_name"
        app:layout_constraintBottom_toBottomOf="@+id/cardView2"
        app:layout_constraintStart_toEndOf="@+id/cardView2"
        app:layout_constraintTop_toTopOf="@+id/cardView2"
        android:layout_marginStart="@dimen/default_margin"
        style="@style/TitleTextStyle"
        />

    <!-- Bouton de fermeture de la fenêtre popup -->
    <ImageView
        android:id="@+id/close_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_close"
        app:layout_constraintBottom_toBottomOf="@+id/cardView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/popup_plant_name"
        app:layout_constraintTop_toTopOf="@+id/cardView2" />

    <!-- Ajout du titre description -->
    <TextView
        android:id="@+id/popup_plant_description_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:text="@string/popup_plant_description_title"
        app:layout_constraintStart_toStartOf="@+id/cardView2"
        app:layout_constraintTop_toBottomOf="@+id/cardView2"
        style="@style/TitleTextStyle"
        />

    <!-- Affichage de la description -->
    <TextView
        android:id="@+id/popup_plant_description_subtitle"
        style="@style/DefaultTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popup_plant_description_subtitle"
        app:layout_constraintStart_toStartOf="@+id/popup_plant_description_title"
        app:layout_constraintTop_toBottomOf="@+id/popup_plant_description_title" />

    <!-- Ajout du titre croissance -->
    <TextView
        android:id="@+id/popup_plant_grow_title"
        style="@style/TitleTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:text="@string/popup_plant_grow_title"
        app:layout_constraintStart_toStartOf="@+id/cardView2"
        app:layout_constraintTop_toBottomOf="@+id/popup_plant_description_subtitle"
        />

    <!-- Affichage de la croissance -->
    <TextView
        android:id="@+id/popup_plant_grow_subtitle"
        style="@style/DefaultTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popup_plant_grow_subtitle"
        app:layout_constraintStart_toStartOf="@+id/popup_plant_grow_title"
        app:layout_constraintTop_toBottomOf="@+id/popup_plant_grow_title"
        />

    <!-- Ajout du titre consommation -->
    <TextView
        android:id="@+id/popup_plant_water_title"
        style="@style/TitleTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:text="@string/popup_plant_water_title"
        app:layout_constraintStart_toStartOf="@+id/cardView2"
        app:layout_constraintTop_toBottomOf="@+id/popup_plant_grow_subtitle"
        />

    <!-- Affichage de la consommation -->
    <TextView
        android:id="@+id/popup_plant_water_subtitle"
        style="@style/DefaultTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popup_plant_water_subtitle"
        app:layout_constraintStart_toStartOf="@+id/popup_plant_water_title"
        app:layout_constraintTop_toBottomOf="@+id/popup_plant_water_title"
        />

    <!-- Ajout d'une ligne invisible pour faciliter la contrainte des éléments -->
    <View
        android:id="@+id/view_separation"
        android:layout_width="1dp"
        android:layout_height="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/popup_plant_water_subtitle" />

    <!-- Bouton de suppression de la plante -->
    <ImageView
        android:id="@+id/delete_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_trash"
        app:layout_constraintBottom_toBottomOf="@+id/view_separation"
        app:layout_constraintEnd_toStartOf="@+id/view_separation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view_separation" />

    <!-- Bouton de favoris de la plante -->
    <ImageView
        android:id="@+id/star_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_unstar"
        app:layout_constraintBottom_toBottomOf="@+id/view_separation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/delete_button"
        app:layout_constraintTop_toTopOf="@+id/view_separation" />

</androidx.constraintlayout.widget.ConstraintLayout>