<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/default_margin">

    <!-- Boite qui va contenir le bouton d'ajout et l'image de la plante -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Bouton d'ajout d'une image -->
        <Button
            android:id="@+id/upload_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_plant_page_upload_button"
            android:background="@color/green"
            style="@style/TitleTextStyle"
            android:textColor="@color/white"
            android:padding="@dimen/default_margin"
            />

        <!-- Image de la plante sélectionnée -->
        <ImageView
            android:id="@+id/preview_image"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/trending2"
            />
    </LinearLayout>

    <!-- Insertion du formulaire d'input du nom de la plante -->
    <EditText
        android:id="@+id/name_input"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="@dimen/item_margin"
        android:hint="@string/add_plant_page_name_input"
        style="@style/DefaultTextStyle"
        android:paddingStart="@dimen/default_margin"/>

    <!-- Insertion du formulaire d'input de la description de la plante -->
    <EditText
        android:id="@+id/description_input"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="@dimen/item_margin"
        android:hint="@string/add_plant_page_description_input"
        style="@style/DefaultTextStyle"
        android:paddingStart="@dimen/default_margin"
        />

    <!-- Insertion du formulaire déroulant de la croissance de la plante -->
    <Spinner
        android:id="@+id/grow_spinner"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="@dimen/item_margin"
        android:entries="@array/add_plant_page_grow_spinner_input"
        android:paddingStart="@dimen/default_margin"
        />

    <!-- Insertion du formulaire déroulant de la consommation de la plante -->
    <Spinner
        android:id="@+id/water_spinner"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:entries="@array/add_plant_page_water_spinner_input"
        android:paddingStart="@dimen/default_margin"
        />

    <!-- Bouton de confirmation d'ajout -->
    <Button
        android:id="@+id/confirm_button"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="30dp"
        android:background="@color/darkGray"
        android:text="@string/add_plant_page_confirm_button"
        android:textColor="@color/white"
        android:textSize="24sp"
        />

</LinearLayout>